assets/tcb: Fixups for xonsh-wrapper and CI/CD scripts
- Get rid of commontorizon/
- Use torizonextras/xonsh-wrapper:dev image
- Update for use Python xonsh new flow

Signed-off-by: Matheus Castello <matheus.castello@toradex.com>

--- a/assets/github/workflows/build-application.yaml
+++ b/assets/github/workflows/build-application.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Build & Deploy
     container:
-      image: torizonextras/torizon-dev:next
+      image: torizonextras/torizon-dev:dev
     steps:
       - uses: actions/checkout@v3
 
