--- a/assets/gitlab/.gitlab-ci.yml
+++ b/assets/gitlab/.gitlab-ci.yml
@@ -19,7 +19,7 @@ stages:
 initial-setup:
   stage: setup
   image:
-    name: commontorizon/pwsh-gitlab:next
+    name: torizonextras/xonsh-wrapper:dev
 
   variables:
     TORIZON_ARCH: ""
@@ -54,7 +54,7 @@ build-docker-image:
     - initial-setup
   stage: build
   image:
-    name: commontorizon/pwsh-gitlab:next
+    name: torizonextras/xonsh-wrapper:dev
 
   variables:
     TASKS_ITERATIVE: "False"
@@ -65,7 +65,7 @@ build-docker-image:
 
       xonsh ./.vscode/tasks.xsh run docker-login
       xonsh ./.vscode/tasks.xsh run run-torizon-binfmt
-      xonsh ./.vscode/tasks.xsh run tcb-platform-publish
+      xonsh ./.vscode/tasks.xsh run create-production-image
 
     ' | xonsh-wrapper.xsh
 
@@ -79,7 +79,7 @@ push-package-to-platform:
     - build-docker-image
   stage: platform
   image:
-    name: commontorizon/pwsh-gitlab:next
+    name: torizonextras/xonsh-wrapper:dev
 
   variables:
     TASKS_ITERATIVE: "False"
@@ -109,7 +109,7 @@ update-fleet:
   rules:
     - if: '$CI_COMMIT_BRANCH == "main"'
   image:
-    name: commontorizon/pwsh-gitlab:next
+    name: torizonextras/xonsh-wrapper:dev
 
   variables:
     TASKS_ITERATIVE: "False"
