--- a/assets/github/workflows/build-application.yaml
+++ b/assets/github/workflows/build-application.yaml
@@ -8,6 +8,7 @@ jobs:
     name: Build & Deploy
     container:
       image: torizonextras/torizon-dev:dev
+      options: --user root
     steps:
       - uses: actions/checkout@v4
 
