.gitignore: Fix missing !.github/workflows/build-* exception
Signed-off-by: Andre Riesco <andre.riesco@toradex.com>

--- a/cppConsole/.gitignore
+++ b/cppConsole/.gitignore
@@ -74,6 +74,8 @@ dkms.conf
 
 #Build directories
 build-*
+#But the build yaml file from ci/cd need to be included
+!.github/workflows/build-*
 
 # End of https://www.gitignore.io/api/c,c++,cmake
 
