--- a/cmakeConsole/.gitignore
+++ b/cmakeConsole/.gitignore
@@ -79,6 +79,8 @@ credentials.zip
 
 #Build directories
 build-*
+#But the build yaml file from ci/cd need to be included
+!.github/workflows/build-*
 
 .conf/.depok
 .conf/.docok
