all: launch: Rename Torizon armvX to to 32 and 64 bits
This make more clear the architecture supported by debug option

Signed-off-by: Matheus Castello <matheus.castello@toradex.com>

--- a/aspnetBlazor/.vscode/launch.json
+++ b/aspnetBlazor/.vscode/launch.json
@@ -22,7 +22,7 @@
             }
         },
         {
-            "name": "Torizon ARMv7",
+            "name": "Torizon arm32",
             "type": "coreclr",
             "request": "launch",
             "program": "${config:torizon_app_root}/__change__",
@@ -49,7 +49,7 @@
             "preLaunchTask": "deploy-torizon-arm"
         },
         {
-            "name": "Torizon ARMv8",
+            "name": "Torizon arm64",
             "type": "coreclr",
             "request": "launch",
             "program": "${config:torizon_app_root}/__change__",
