--- a/cLvgl/.vscode/launch.json
+++ b/cLvgl/.vscode/launch.json
@@ -50,7 +50,7 @@
             "postDebugTask": "clean-framebuffer"
         },
         {
-            "name": "Torizon ARMv7",
+            "name": "Torizon arm32",
             "type": "cppdbg",
             "request": "launch",
             "program": "${config:torizon_app_root}/main",
@@ -98,7 +98,7 @@
             "postDebugTask": "clean-framebuffer"
         },
         {
-            "name": "Torizon ARMv8",
+            "name": "Torizon arm64",
             "type": "cppdbg",
             "request": "launch",
             "program": "${config:torizon_app_root}/main",
