--- a/cmakeConsole/.vscode/launch.json
+++ b/cmakeConsole/.vscode/launch.json
@@ -27,7 +27,7 @@
             "preLaunchTask": "build-debug-local"
         },
         {
-            "name": "Torizon ARMv7",
+            "name": "Torizon arm32",
             "type": "cppdbg",
             "request": "launch",
             "program": "${config:torizon_app_root}/__change__",
@@ -74,7 +74,7 @@
             "preLaunchTask": "deploy-torizon-arm"
         },
         {
-            "name": "Torizon ARMv8",
+            "name": "Torizon arm64",
             "type": "cppdbg",
             "request": "launch",
             "program": "${config:torizon_app_root}/__change__",
