--- a/dotnetAvalonia/.vscode/launch.json
+++ b/dotnetAvalonia/.vscode/launch.json
@@ -42,7 +42,7 @@
             "preLaunchTask": "deploy-torizon-amd64"
         },
         {
-            "name": "Torizon ARMv7",
+            "name": "Torizon arm32",
             "type": "coreclr",
             "request": "launch",
             "program": "${config:torizon_app_root}/__change__",
@@ -71,7 +71,7 @@
             "preLaunchTask": "deploy-torizon-arm"
         },
         {
-            "name": "Torizon ARMv8",
+            "name": "Torizon arm64",
             "type": "coreclr",
             "request": "launch",
             "program": "${config:torizon_app_root}/__change__",
