--- a/dotnetAvaloniaFrameBuffer/.vscode/launch.json
+++ b/dotnetAvaloniaFrameBuffer/.vscode/launch.json
@@ -33,7 +33,7 @@
             "postDebugTask": "stop-torizon-amd64"
         },
         {
-            "name": "Torizon ARMv7",
+            "name": "Torizon arm32",
             "type": "coreclr",
             "request": "launch",
             "program": "${config:torizon_app_root}/__change__",
@@ -64,7 +64,7 @@
             "postDebugTask": "stop-torizon-arm"
         },
         {
-            "name": "Torizon ARMv8",
+            "name": "Torizon arm64",
             "type": "coreclr",
             "request": "launch",
             "program": "${config:torizon_app_root}/__change__",
