--- a/cmakeGTK4/.vscode/launch.json
+++ b/cmakeGTK4/.vscode/launch.json
@@ -74,7 +74,7 @@
             "preLaunchTask": "deploy-torizon-amd64"
         },
         {
-            "name": "Torizon ARMv7",
+            "name": "Torizon arm32",
             "type": "cppdbg",
             "request": "launch",
             "program": "${config:torizon_app_root}/__change__",
@@ -121,7 +121,7 @@
             "preLaunchTask": "deploy-torizon-arm"
         },
         {
-            "name": "Torizon ARMv8",
+            "name": "Torizon arm64",
             "type": "cppdbg",
             "request": "launch",
             "program": "${config:torizon_app_root}/__change__",
