--- a/dotnetConsole/.vscode/launch.json
+++ b/dotnetConsole/.vscode/launch.json
@@ -13,7 +13,7 @@
             "stopAtEntry": false
         },
         {
-            "name": "Torizon ARMv7",
+            "name": "Torizon arm32",
             "type": "coreclr",
             "request": "launch",
             "program": "${config:torizon_app_root}/__change__",
@@ -40,7 +40,7 @@
             "preLaunchTask": "deploy-torizon-arm"
         },
         {
-            "name": "Torizon ARMv8",
+            "name": "Torizon arm64",
             "type": "coreclr",
             "request": "launch",
             "program": "${config:torizon_app_root}/__change__",
