--- a/rustSlint/.vscode/launch.json
+++ b/rustSlint/.vscode/launch.json
@@ -86,7 +86,7 @@
             "preLaunchTask": "deploy-torizon-amd64"
         },
         {
-            "name": "Torizon ARMv7",
+            "name": "Torizon arm32",
             "type": "cppdbg",
             "request": "launch",
             "program": "${config:torizon_app_root}/__change__",
@@ -133,7 +133,7 @@
             "preLaunchTask": "deploy-torizon-arm"
         },
         {
-            "name": "Torizon ARMv8",
+            "name": "Torizon arm64",
             "type": "cppdbg",
             "request": "launch",
             "program": "${config:torizon_app_root}/__change__",
