cppQML: tasks: Fix missed pwsh call with a python script as target
Signed-off-by: Matheus Castello <matheus.castello@toradex.com>

--- a/cppQML/.vscode/tasks.json
+++ b/cppQML/.vscode/tasks.json
@@ -686,11 +686,9 @@
             "label": "update-qt-ini-arm64",
             "detail": "",
             "hide": true,
-            "command": "pwsh",
+            "command": "xonsh",
             "type": "process",
             "args": [
-                "-nop",
-                "-c",
                 "${env:HOME}/.apollox/scripts/update-qt-creator-ini.xsh",
                 "${workspaceFolder}",
                 "${config:torizon_ip}:${config:torizon_debug_port1}",
@@ -715,11 +713,9 @@
             "label": "update-qt-ini-arm",
             "detail": "",
             "hide": true,
-            "command": "pwsh",
+            "command": "xonsh",
             "type": "process",
             "args": [
-                "-nop",
-                "-c",
                 "${env:HOME}/.apollox/scripts/update-qt-creator-ini.xsh",
                 "${workspaceFolder}",
                 "${config:torizon_ip}:${config:torizon_debug_port1}",
@@ -744,11 +740,9 @@
             "label": "update-qt-ini-local",
             "detail": "",
             "hide": true,
-            "command": "pwsh",
+            "command": "xonsh",
             "type": "process",
             "args": [
-                "-nop",
-                "-c",
                 "${env:HOME}/.apollox/scripts/update-qt-creator-ini.xsh",
                 "${workspaceFolder}",
                 "localhost:${config:torizon_debug_port1}",
